# ComfyUI-CrosshairGuidelines

./: CHANGELOG.md  README.md  __init__.py  pyproject.toml
web/: index.js
web/extensions/: crosshair_guidelines.js
web/extensions/crosshair_guidelines/: diagnostics.js  graph_activity.js  graph_coordinates.js  graph_geometry.js  graph_selection.js  graph_targets.js  guideline_renderer.js  input_tracker.js  interaction_latch.js  interaction_policy.js  interaction_reducer.js  interaction_state.js  opacity_adapter.js  opacity_state.js  resize_session.js  settings.js  settings_dom_patch.js
